--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 # Preview URL
-NEXT_PUBLIC_URL=https://daudz-labaks-twitter-kz9cma33d-trixolol.vercel.app/
+NEXT_PUBLIC_URL=https://daudz-labaks-twitter.vercel.app/
