--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "autoprefixer": "^10.4.8",
+    "next": "12.2.4",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
     "eslint-import-resolver-typescript": "^3.4.0",
