--- a/functions/package.json
+++ b/functions/package.json
@@ -16,10 +16,12 @@
   "dependencies": {
     "firebase-admin": "^10.2.0",
     "firebase-functions": "^4.0.1",
+    "next": "12.2.4",
     "nodemailer": "^6.8.0"
   },
   "devDependencies": {
     "@types/nodemailer": "^6.4.6",
+     "next": "12.2.4",
     "typescript": "^4.6.4"
   },
   "private": true
